@startuml
'https://plantuml.com/class-diagram
skinparam linetype ortho

class User
class Admin

enum Role {
    GUEST
    USER
    ADMIN
}

abstract class Account{
    -Long id;
    -String username;
    -String email;
    -String password;
    -Set<Role> setRole;
}

class Product{
    -Long id;
    -String productName;
    -String count;
    -Long price;
    -...
}

class Order{
    -Long id;
    -Set<Product> setProduct
    -...
}

class Wallet{
    -...
}

class Card{
    -...
}

class Money{
    -...
}

class User{
    -...
}
class Admin{
    -...
}

' Relationship between entities '

Account <|-- User
Account <|-- Admin
Account "1" *-- "*" Role : has

User "1" *-- "*" Order : owns
Order "1" *-- "*" User : belongs to
User "1" *-- "*" Wallet : owns
Wallet "1" *-- "*" User : belongs to
Wallet "1" *-- "*" Card : owns
Card "1" *-- "*" Wallet : belongs to

Card "1" *-- "*" Money : owns
Money "1" *-- "*" Card : belongs to

Order "1" *-- "*" Product : owns
Product "1" *-- "*" Order : belongs to
@enduml